--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-console.log('Hello world')
+<!DOCTYPE html>
+<title>Metamorphosis Parsnip Universe</title>
+<meta name="description" content="Metamorphosis Parsnip Universe">
+
+<h1>Hello!</h1>
